--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
         <Button
             style="@style/buttonOperator"
             android:text="/"
+            android:onClick="operationAction"
             />
 
     </LinearLayout>
@@ -85,18 +86,22 @@
         <Button
             style="@style/buttonNumber"
             android:text="7"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="8"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="9"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonOperator"
             android:text="x"
+            android:onClick="operationAction"
             />
 
     </LinearLayout>
@@ -108,18 +113,22 @@
         <Button
             style="@style/buttonNumber"
             android:text="4"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="5"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="6"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonOperator"
             android:text="-"
+            android:onClick="operationAction"
             />
 
     </LinearLayout>
@@ -131,18 +140,22 @@
         <Button
             style="@style/buttonNumber"
             android:text="1"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="2"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonNumber"
             android:text="3"
+            android:onClick="numberAction"
             />
         <Button
             style="@style/buttonOperator"
             android:text="+"
+            android:onClick="operationAction"
             />
 
     </LinearLayout>
@@ -158,14 +171,16 @@
         <Button
             style="@style/buttonNumber"
             android:text="0"
+            android:onClick="numberAction"
             />
+
         <Button
             style="@style/buttonNumber"
             android:layout_weight="2"
             android:background="@color/orange"
-            android:textSize="40sp"
             android:onClick="equalsAction"
             android:text="="
+            android:textSize="40sp"
             />
 
     </LinearLayout>
